function comments update

--- a/pixel.html
+++ b/pixel.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Pixel Art Maker">
+    <meta name="keywords" content="HTML,CSS,JavaScript">
+    <meta name="author" content="Faith Holmes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="pixel.css">
